--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,24 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;/* :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+@tailwind utilities;
+
+ :root {
+  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 400; */
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
+  background-color: #ffffff;
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
 }
 
-.container {
+/*.container {
   margin: 0;
   padding-top: 10vh;
   display: flex;
